--- a/app/sass/goods_details.scss
+++ b/app/sass/goods_details.scss
@@ -1,6 +1,6 @@
 html,body{width: 100%;height: 100%; margin: 0;padding: 0;overflow-x: hidden;}
 .header{width: 100%;height: 7vh;background: darkmagenta;position: fixed;z-index: 10;padding: 0 10px;}
-.header span.icon-xiangzuojiantou{color: white;font-size: 22px;float: left; padding-top:1.5vh ;}
+.header a.icon-xiangzuojiantou{color: white;font-size: 22px;float: left; padding-top:1.5vh ;text-decoration: none;}
 .header span.icon-liebiao{color: white;font-size: 22px;float: right; padding-top:1.5vh ;margin-right: 5vw;}
 .header .btn{float: left;width: 40vw;height: 7vh;text-align: center;line-height: 7vh;margin-left: 25vw;}
 .header .btn a{float: left;width: 15vw;height: 7vh;color: white;text-decoration: none;font-size: 16px;margin-right: 1vw;}
@@ -43,6 +43,7 @@ ul,li{margin: 0;padding: 0;list-style: none;}
 
 .footer{width: 100%;height: 50px;position: fixed;bottom: 0;background: darkmagenta;}
 .footer a{text-decoration: none;float: left;height: 50px; line-height:50px;text-align: center;font-size: 18px;}
-.footer a.iconfont{width: 30vw;background: white;color: #333333;}
+.footer a.iconfont{width: 30vw;background: white;color: #333333;position: relative;}
+.footer a.iconfont span{display: block; width:20px;height:20px;position: absolute;background:darkmagenta;top: 2px;left: 16vw;text-align: center;line-height: 20px;border-radius:50%;font-weight: 600;color:white;font-size: 14px;}
 .footer a.s_cart{width: 35vw;background: orangered;color: white;}
 .footer a.buy{width:35vw;background: darkmagenta;color: white;}
