--- a/app/font/iconfont.css
+++ b/app/font/iconfont.css
@@ -23,7 +23,6 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-<<<<<<< HEAD
 
 .icon-liebiao:before { content: "\e605"; }
 
@@ -39,10 +38,9 @@
 
 .icon-shouye:before { content: "\e61f"; }
 
-=======
 .icon-lajixiang:before { content: "\e645"; }
 .icon-gouwuche:before { content: "\e63f"; }
 .icon-xiangzuojiantou:before { content: "\e660"; }
-.icon-liebiao:before { content: "\e601"; }
+/*.icon-liebiao:before { content: "\e601"; }*/
 .icon-gouwuche1:before { content: "\e6b5"; }
->>>>>>> 1946fe5b91387b356ad2ed09b2b645ae038b688f
+
