--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -3,16 +3,16 @@ body{font-family: "微软雅黑";font-size: 14px;}
 ul{list-style: none;}
 .box{
     width: 100vw;;
-    //头部
-    .header{
-        width: 100vw; height: 7vh;text-align: center;line-height: 7vh;color: #fff; background: #8e488e;
-        .search{
-            position: fixed;top: 1px; right: 10px;
-        }
-    }
+//  //头部
+//  .header{
+//      width: 100vw; height: 7vh;text-align: center;line-height: 7vh;color: #fff; background: #8e488e;position: fixed;top: 0;left: 0;z-index: 50;
+//      .search{
+//        margin-left:80vw ;margin-top: -7vh;
+//      }
+//  }
     
     .banner{
-        width: 100vw;height: auto; background: #f1f5f6;
+        width: 100vw;height: auto; background: #f1f5f6;margin-top: 40px;
 //      轮播图
         .carousel{
             width: 100vw;height: 30vh;
@@ -67,31 +67,31 @@ ul{list-style: none;}
                         width: 100%;height: 80%;
                     }
                     .title{
-                        color: #616b7f;
+                        color: #616b7f;font-size: 12px;
                     }
                     .price{
-                        color: red;font-weight: bolder;
+                        color: red;font-weight: bolder;font-size: 12px;
                     }
                 }
             }
         }
   
     }
-    //底部
-    .footer{
-        width: 100vw; height: 8vh; background: #fff; position: fixed;bottom: 0;
-        .list{
-            display: flex; flex-flow: row nowrap;
-            li{
-                float: left; width: 20vw;text-align: center;font-size: 12px;line-height: 3vh;margin-top: 1vh;flex: 1;
-                a{color: #777;text-decoration: none;}
-                #highlight{
-                    color:#8e488e ;
-                }
-            }
-        }
-             
-    }
+//  //底部
+//  .footer{
+//      width: 100vw; height: 8vh; background: #fff; position: fixed;bottom: 0;
+//      .list{
+//          display: flex; flex-flow: row nowrap;
+//          li{
+//              float: left; width: 20vw;text-align: center;font-size: 12px;line-height: 3vh;margin-top: 1vh;flex: 1;
+//              a{color: #777;text-decoration: none;}
+//              #highlight{
+//                  color:#8e488e ;
+//              }
+//          }
+//      }
+//           
+//  }
 //      回到顶部
     .comeback{
         position: fixed; bottom: 8vh;right:20px;color: #ef4da6;
