--- a/app/css/shoppingcart.css
+++ b/app/css/shoppingcart.css
@@ -1,7 +1,5 @@
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow-x: hidden; }
 
-body { display: flex; }
-
 ul, li { margin: 0; padding: 0; list-style: none; }
 
 .header { width: 100%; height: 7vh; background: darkmagenta; position: fixed; z-index: 10; padding: 0 10px; }
@@ -32,13 +30,13 @@ section .goods_list li { height: 26vw; border-bottom: 2px solid darkgray; width:
 
 section .goods_list li img { width: 19vw; }
 
-section .goods_list li img, section .goods_list li label, section .goods_list li p { float: left; }
+section .goods_list li img, section .goods_list li .check, section .goods_list li p { float: left; }
 
 section .goods_list li .check { margin-top: 10vw; margin-right: 10px; }
 
 section .goods_list li p { line-height: 30px; width: 70vw; }
 
-section .goods_list li p a { text-decoration: none; color: #333333; }
+section .goods_list li p a { display: block; text-decoration: none; color: #333333; }
 
 section .goods_list li p span.price { float: left; color: red; font-weight: 600; }
 
