--- a/app/sass/shoppingcart.scss
+++ b/app/sass/shoppingcart.scss
@@ -1,5 +1,4 @@
 html,body{width: 100%;height: 100%; margin: 0;padding: 0;overflow-x: hidden;}
-body{display: flex;}
 ul,li{margin: 0;padding: 0;list-style: none;}
 .header{width: 100%;height: 7vh;background: darkmagenta;position: fixed;z-index: 10;padding: 0 10px;}
 .header a.icon-xiangzuojiantou{color: white;font-size: 22px;float: left; padding-top:1.5vh ;text-decoration: none;}
@@ -25,10 +24,10 @@ ul,li{margin: 0;padding: 0;list-style: none;}
 section{flex: 1;margin-top: 8vh;}
 section .goods_list li{height: 26vw;border-bottom: 2px solid darkgray;width: 100vw;padding: 5px;}
 section .goods_list li img{width: 19vw;}
-section .goods_list li img,section .goods_list li label,section .goods_list li p{float: left;} 
+section .goods_list li img,section .goods_list li .check,section .goods_list li p{float: left;} 
 section .goods_list li .check{margin-top: 10vw;margin-right: 10px;}
 section .goods_list li p{line-height: 30px;width: 70vw;}
-section .goods_list li p a{text-decoration: none;color: #333333;}
+section .goods_list li p a{display: block; text-decoration: none;color: #333333;}
 section .goods_list li p span.price{float: left;color: red;font-weight: 600;}
 section .goods_list li p .number{float: right;margin: 0;padding: 0;position: relative;margin-right: 10px;}
 section .goods_list li p .number input{width: 20px;height: 15px;text-align: center;margin: 0;border: none;}
