--- a/app/css/perfect.css
+++ b/app/css/perfect.css
@@ -6,17 +6,47 @@ section { /*头部大框架*/ width: 100%; height: 2000px; }
 
 section header { width: 100%; height: 48px; background: #8e488e; color: #fff; line-height: 48px; overflow: hidden; }
 
-section header h1 { display: inline-block; width: 70%; height: 48px; line-height: 48px; font-size: 17px; color: #fff; text-align: center; margin: 0; padding: 0; }
+section header h1 { /*标题*/ display: inline-block; width: 70%; height: 48px; line-height: 48px; font-size: 17px; color: #fff; text-align: center; margin: 0; padding: 0; }
 
-section header span.icon-fanhui { width: 10%; height: 48px; display: inline-block; float: left; margin-left: 15px; }
+section header span.icon-fanhui { /*返回按钮*/ width: 10%; height: 48px; display: inline-block; float: left; margin-left: 15px; }
 
-section header span.icon-liebiao { width: auto; height: 48px; display: inline-block; float: right; padding-right: 15px; }
+section header span.icon-liebiao { /*列表按钮*/ width: 4%; height: 48px; display: inline-block; float: right; padding-right: 15px; }
+
+section article { /*内容*/ width: 100%; width: 100%; height: 400px; padding-left: 9%; padding-right: 10%; padding-top: 30px; }
+
+section article p { margin: 0; padding: 0; }
+
+section article p.user { /*昵称*/ width: 100%; height: 34px; text-align: center; overflow: hidden; }
+
+section article p.user span { display: inline-block; width: 20%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 32px; margin: 0; padding: 0; float: left; }
+
+section article p.user input#username { /*输入框*/ display: inline-block; min-width: 62%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
+
+section article p.tel { /*手机号码*/ width: 100%; height: 35px; text-align: center; margin-top: 10px; overflow: hidden; }
+
+section article p.tel span { display: inline-block; width: 20%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 32px; margin: 0; padding: 0; float: left; }
+
+section article p.tel input#telephone { /*输入框*/ display: inline-block; min-width: 62%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
+
+section article hgroup.address { /*收货地址*/ width: 100%; height: 170px; text-align: center; margin-top: 10px; overflow: hidden; }
+
+section article hgroup.address span { display: inline-block; width: 20%; height: 168px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 166px; margin: 0; padding: 0; float: left; }
+
+section article hgroup.address p { /*选择框*/ display: inline-flex; flex-direction: column; flex: 3; min-width: 62%; height: 168px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
+
+section article hgroup.address p input { display: inline-flex; flex-direction: column; min-width: 62%; height: 36px; background: #eeeeee; border: 1px solid #cccccc; border-left: none; border-right: none; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0 0 0 3px; float: left; }
+
+section article hgroup.address p input#txt { /*具体地址*/ border-bottom: none; height: 58px; }
+
+section article hgroup.address p :nth-child(1) { border-top: none; border-left: none; }
+
+section article .btn { /*提交按钮*/ width: 82.5%; height: 34px; margin-top: 20px; background: #8e488e; color: #fff; font-size: 14px; border: none; cursor: pointer; }
 
 section footer { /*底部列表*/ position: fixed; bottom: 0; padding-top: 10px; width: 100%; height: 53px; border-top: 1px solid #cccccc; }
 
 section footer ul { display: flex; flex: 1; margin: 0; padding: 0; color: #777777; }
 
-section footer ul li:nth-child(3) { color: #8e488e; }
+section footer ul li:last-child { color: #8e488e; }
 
 section footer ul li { /*底部列表每一个子元素*/ display: flex; flex: 1; flex-direction: column; font-size: 12px; text-align: center; }
 
