--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -64,7 +64,7 @@ ul{list-style: none;}
                 li{
                     height: 35vh;flex: 1 1 90%;background: #fff;margin: 5px 10px;
                     img{
-                        width: 100%;height: 80%;
+                        width: 100%;height: 70%;
                     }
                     .title{
                         color: #616b7f;font-size: 12px;
@@ -75,6 +75,23 @@ ul{list-style: none;}
                 }
             }
         }
+        
+        
+        
+//      .datalist4{
+//          width: 100vw;height: auto;margin-top:2vh ;
+//          ul{
+//              width: 100%;height: 100%;display: flex;flex-flow:row wrap ;
+//              li{
+//                  height: 15vh;flex: 1 1 45%;margin: 3px;
+//                  img{
+//                      width: 100%;height: 100%;
+//                  }
+//              }
+//          }
+//      }
+        
+        
   
     }
 //  //底部
