--- a/app/sass/center.scss
+++ b/app/sass/center.scss
@@ -1,6 +1,7 @@
 *{list-style: none;margin: 0;padding: 0;text-decoration: none;}
-body{background: #f1f5f6; font-size: 12px;}
+body{background: #f1f5f6; font-size: 14px; font-family: "微软雅黑";}
 
+.header{font-size: 16px;}
 
 //头像号码
 #pageMine .photo{
@@ -15,7 +16,7 @@ body{background: #f1f5f6; font-size: 12px;}
     .people_pic{
         width: 50px;height:50px;margin-top: 25px;
         img{
-            width: 50px;height:50px;border-radius: 115px;
+            width: 50px;height:50px;border-radius: 115px;margin-left: 15px;
         }
     }
     
@@ -28,12 +29,12 @@ body{background: #f1f5f6; font-size: 12px;}
     .VIP {
         margin-top: 5vh;
         p,span{
-            font-size: 16px;
+            font-size: 14px;
             font-weight: bold;
             color: #fff;
         }
         .small_pic img{
-            width: 20px;height: 20px;;
+            width: 20px;height: 20px;margin-bottom: 5px;
         }
     }
 }
@@ -41,11 +42,11 @@ body{background: #f1f5f6; font-size: 12px;}
 
 //金额
 #pageMine .money{
-    width: 100vw; height: 8vh;line-height:3vh; text-align: center;background: #fff;margin-left: -15px;
+    width: 100vw; height: 8vh;line-height:2vh; text-align: center;background: #fff;margin-left: -15px;
     a{
         color: #000000;
         p:nth-child(1){
-            font-weight: bolder;font-size: 16px;
+            font-weight: bolder;font-size: 14px;
             margin-top: 5px; 
         }
     }
