--- a/app/css/index.css
+++ b/app/css/index.css
@@ -7,6 +7,10 @@ ul { list-style: none; }
 
 .box { width: 100vw; }
 
+.box .header { width: 100vw; height: 7vh; text-align: center; line-height: 7vh; color: #fff; background: #8e488e; position: fixed; top: 0; left: 0; z-index: 50; }
+
+.box .header .search { margin-left: 80vw; margin-top: -7vh; }
+
 .box .banner { width: 100vw; height: auto; background: #f1f5f6; margin-top: 40px; }
 
 .box .banner .carousel { width: 100vw; height: 30vh; }
