--- a/app/css/shoppingcart.css
+++ b/app/css/shoppingcart.css
@@ -4,7 +4,9 @@ ul, li { margin: 0; padding: 0; list-style: none; }
 
 header { display: flex; position: relative; background: #8e488e; padding: 15px 0; color: #fff; font-size: 16px; font-weight: 600; justify-content: center; align-items: center; }
 
-header a { flex: 1; text-align: left; margin-left: 10px; }
+header a { flex: 1; text-align: left; margin-left: 10px; text-decoration: none; }
+
+header a.icon-fanhui { color: white; flex: 1; text-align: left; margin-left: 10px; font-size: 22px; }
 
 header span:nth-child(2) { flex: 4; text-align: center; }
 
@@ -12,7 +14,7 @@ header span:last-child { position: relative; flex: 1; margin-right: 10px; text-a
 
 header span:last-child .caidan { position: absolute; top: 30px; right: 0; opacity: 0; }
 
-header span:last-child .caidan ul { list-style: none; border-radius: 5px; background: #666; margin: 0; padding: 0; }
+header span:last-child .caidan ul { display: none; list-style: none; border-radius: 5px; background: #666; margin: 0; padding: 0; }
 
 header span:last-child .caidan ul li { opacity: 0.9; }
 
@@ -44,7 +46,7 @@ section .goods_list li p .number button { border: 1px solid darkgray; }
 
 section .goods_list li p .iconfont { float: right; border: none; background: white; margin-top: 8px; }
 
-.footer { width: 100%; height: 40px; position: fixed; bottom: 0; background: darkmagenta; font-weight: 600; }
+.footer { width: 100%; height: 40px; position: fixed; bottom: 0; background: #8e488e; font-weight: 600; }
 
 .footer a { text-decoration: none; float: left; height: 40px; line-height: 40px; text-align: center; font-size: 16px; }
 
@@ -52,4 +54,4 @@ section .goods_list li p .iconfont { float: right; border: none; background: whi
 
 .footer a.pay_way { width: 35vw; background: orangered; color: white; }
 
-.footer a.buy { width: 35vw; background: darkmagenta; color: white; }
+.footer a.buy { width: 35vw; background: #8e488e; color: white; }
