--- a/app/sass/shoppingcart.scss
+++ b/app/sass/shoppingcart.scss
@@ -14,8 +14,16 @@ header{
          flex: 1;
          text-align:left;
          margin-left: 10px;
+         text-decoration: none;
         
      }
+     a.icon-fanhui{
+         color: white;
+         flex: 1;
+         text-align:left;
+         margin-left: 10px;
+         font-size: 22px;
+     }     
      span:nth-child(2){
          flex: 4;
          text-align: center;
@@ -32,9 +40,10 @@ header{
             right:0;
             opacity: 0;
             ul{
+                display: none;
                 list-style: none;
                 border-radius: 5px;
-                 background: #666;
+                background: #666;
                 margin: 0;
                 padding: 0;
                  li{
@@ -78,9 +87,9 @@ section .goods_list li p .number{float: right;margin: 0;padding: 0;position: rel
 section .goods_list li p .number input{width: 20px;height: 15px;text-align: center;margin: 0;border: none;}
 section .goods_list li p .number button{border: 1px solid darkgray;}
 section .goods_list li p .iconfont{float: right;border: none;background: white;margin-top: 8px;}
-.footer{width: 100%;height: 40px;position: fixed;bottom: 0;background: darkmagenta;font-weight: 600;}
+.footer{width: 100%;height: 40px;position: fixed;bottom: 0;background:#8e488e;font-weight: 600;}
 .footer a{text-decoration: none;float: left;height: 40px; line-height:40px;text-align: center;font-size: 16px;}
 .footer label{float: left; width: 30vw;height: 40px; background: white;color: #333333;position: relative;text-align: center;line-height: 40px;}
 .footer a.pay_way{width: 35vw;background: orangered;color: white;}
-.footer a.buy{width:35vw;background: darkmagenta;color: white;}
+.footer a.buy{width:35vw;background:#8e488e;color: white;}
 
