--- a/app/css/myorder.css
+++ b/app/css/myorder.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
-body { margin: 0; padding: 0; }
+body { margin: 0; padding: 0; height: 130vh; }
 
 /*头部*/
-header { display: flex; position: relative; background: #8e488e; padding: 15px 0; color: #fff; font-size: 16px; font-weight: 600; justify-content: center; align-items: center; }
+header { display: flex; position: fixed; z-index: 10; top: 0; left: 0; width: 100%; background: #8e488e; padding: 15px 0; color: #fff; font-size: 16px; font-weight: 600; justify-content: center; align-items: center; }
 
-header a { flex: 1; text-align: left; margin-left: 10px; }
+header a { flex: 1; text-align: left; margin-left: 10px; text-decoration: none; color: #fff; }
 
 header span:nth-child(2) { flex: 4; text-align: center; }
 
 header span:last-child { position: relative; flex: 1; margin-right: 10px; text-align: right; }
 
-header span:last-child .caidan { position: absolute; top: 30px; right: 0; opacity: 0; }
+header span:last-child .caidan { position: absolute; top: 30px; right: 0; display: none; }
 
 header span:last-child .caidan ul { list-style: none; border-radius: 5px; background: #666; margin: 0; padding: 0; }
 
@@ -20,19 +20,58 @@ header span:last-child .caidan ul li a { display: block; font-weight: normal; te
 
 header span:last-child .caidan ul:before { content: ''; display: inline-block; position: absolute; right: 5px; top: -16px; width: 0; height: 0; border: 10px solid transparent; border-bottom: 8px solid #666; }
 
-/*脚部*/
-.type { display: flex; padding: 20px 0; border-bottom: 1px solid #333; }
+.type { margin-top: 50px; display: flex; padding: 20px 0; border-bottom: 1px solid #333; background: f1f5f6; }
 
-.type span { flex: 1; text-align: center; color: #333; border-right: 1px solid #333; }
+.type span { flex: 1; text-align: center; color: #333; border-right: 1px solid #333; background: f1f5f6; font-size: 1em; }
 
 .type span:last-child { border-right: none; }
 
-footer { position: fixed; left: 0; bottom: 0; right: 0; background: #fff; border-top: 1px solid #ddd; padding: 10px 0; }
+/*商品信息*/
+.order_details { background: f1f5f6; padding-bottom: 10px; }
 
-footer nav { display: flex; justify-content: center; }
+.order_details div { display: flex; flex-wrap: wrap; }
 
-footer nav a { color: #666; flex: 1; text-align: center; text-decoration: none; display: flex; flex-direction: column; }
+.order_details div div { display: flex; width: 100%; }
 
-footer nav a span:first-child { font-size: 20px; }
+.order_details div .header { padding: 10px 0; border-bottom: 1px solid #ddd; }
 
-footer nav a span:nth-child(2) { margin: 5px; font-size: 12px; }
+.order_details div .header span { flex: 1; font-size: 1em; margin-left: 10px; }
+
+.order_details div .header span:last-child { text-align: right; margin-right: 10px; color: palevioletred; }
+
+.order_details div .content { border-bottom: 1px solid #ddd; display: flex; padding-bottom: 10px; flex-wrap: wrap; }
+
+.order_details div .content section { display: flex; width: 100%; }
+
+.order_details div .content section img { width: 6em; height: 8em; }
+
+.order_details div .content section div { display: flex; flex-direction: column; flex: 6; }
+
+.order_details div .content section div span { display: flex; justify-content: flex-start; align-items: flex-end; }
+
+.order_details div .content section div span:first-child { margin-bottom: 30px; }
+
+.order_details div .content section span { flex: 1; display: flex; justify-content: flex-end; align-items: flex-end; margin-right: 20px; }
+
+.order_details div .total { display: flex; justify-content: flex-end; padding: 10px 0; font-size: 1em; border-bottom: 1px solid #ddd; }
+
+.order_details div .total span { color: orangered; margin-right: 10px; }
+
+.order_details div .btn { padding: 10px 0; display: flex; justify-content: flex-end; flex-wrap: nowrap; }
+
+.order_details div .btn span { padding: 1vw 2vw; border: 1px solid #E0E0E0; border-radius: 5px; margin-right: 10px; font-size: 1em; }
+
+/*脚部*/
+footer li:nth-child(4) a i { color: #8e488e; }
+
+footer li:nth-child(4) a div { color: #8e488e; }
+
+.footer { width: 100vw; height: 8vh; background: #fff; position: fixed; bottom: 0; }
+
+.footer .list { display: flex; flex-flow: row nowrap; }
+
+.footer .list li { float: left; width: 20vw; text-align: center; font-size: 12px; line-height: 3vh; margin-top: 1vh; flex: 1; }
+
+.footer .list li a { color: #777; text-decoration: none; }
+
+.footer .list li #highlight { color: #8e488e; }
