--- a/app/css/list.css
+++ b/app/css/list.css
@@ -12,7 +12,7 @@ section header span.icon-fanhui { /*返回按钮*/ width: 10%; height: 48px; dis
 
 section header span.icon-liebiao { /*列表按钮*/ width: auto; height: auto; float: right; display: inline-block; margin-right: 20px; cursor: pointer; }
 
-section article { /*主题内容*/ padding-top: 43px; width: 100%; height: 1000px; background: #f1f5f6; display: flex; }
+section article { /*主题内容*/ padding-top: 39px; width: 100vw; height: auto; background: #f1f5f6; display: flex; }
 
 section article span.headerlist { /*右侧固定菜单栏*/ position: absolute; display: block; top: 47px; right: 10px; opacity: 0; background: #666; border-radius: 5px; margin: 0; padding: 0; }
 
@@ -20,33 +20,38 @@ section article span.headerlist a { display: block; font-weight: normal; text-de
 
 section article span.headerlist:before { content: ''; display: inline-block; position: absolute; right: 10px; top: -16px; width: 0; height: 0; border: 10px solid transparent; border-bottom: 8px solid #666; }
 
-section article nav { /*左边的导航列表*/ width: 100px; height: auto; background: #fff; }
+section article nav { /*左边的导航列表*/ padding-top: 10px; width: 100px; height: 428px; background: #fff; }
 
 section article nav ul { width: 100px; height: 100%; }
 
 section article nav ul li { width: 100px; height: 42px; border-top: 1px solid #f1f5f6; font-size: 14px; text-align: center; line-height: 42px; }
 
-section article article { /*ajax请求数据*/ width: 100%; height: 800px; margin-left: 10px; display: flex; background: #fff; padding-top: 10px; flex-direction: column; }
+section article nav ul li a { text-decoration: none; color: #3d3d3d; }
 
-section article article h1 { /*热门推荐标题*/ width: 100%; height: 38px; line-height: 40px; background: #f1f5f6; margin: 0; padding-top: 0; }
+section article article { /*ajax请求数据*/ width: 85vw; height: auto; margin-left: 10px; display: flex; background: #fff; padding-top: 10px; flex-direction: column; }
 
-section article article ul { padding-top: 5px; width: 100%; height: auto; display: flex; flex-wrap: wrap; justify-content: flex-start; }
+section article article h1 { /*热门推荐标题*/ width: 85vw; height: 38px; line-height: 40px; background: #f1f5f6; margin: 0; padding-top: 5px; }
 
-section footer { /*底部列表*/ position: fixed; bottom: 0; padding-top: 10px; width: 100%; height: 53px; border-top: 1px solid #cccccc; background: #fff; }
+section article article ul { padding-top: 5px; width: auto; height: auto; display: flex; flex-wrap: wrap; justify-content: flex-start; }
 
-section footer ul { display: flex; flex: 1; margin: 0; padding: 0; color: #777777; }
+section footer { /*底部列表当前高亮*/ }
 
-section footer ul li:nth-child(3) { color: #8e488e; }
+section footer .active #homeicon3 { color: #8e488e; }
 
-section footer ul li { /*底部列表每一个子元素*/ display: flex; flex: 1; flex-direction: column; font-size: 12px; text-align: center; cursor: pointer; }
+section footer .active .text { color: #8e488e; }
 
-section footer ul li span.iconfont { /*列表子元素字体图标*/ display: block; width: 100%; height: 100%; font-size: 22px; text-align: center; }
+/*点击左导航,出现样式*/
+.nobg { background: #f1f5f6; }
+
+.color { color: #ff0000; }
 
 /*ajax数据加载的样式*/
-.active { color: #ff0000; background: #f1f5f6; }
+.a { display: inline-block; width: 23vw; height: 20vh; background: #fff; }
 
-.li { width: 290px; height: 120px; background: #fff; display: flex; flex-direction: column; flex: 1; }
+.title_a { text-decoration: none; color: #3d3d3d; }
 
-.img { width: 90px; height: 90px; }
+.li { width: 23vw; height: 20vh; background: #fff; display: flex; flex-direction: column; flex: 1; }
 
-.p { text-align: center; display: block; width: 80px; height: 20px; line-height: 20px; margin: 0; padding: 0; }
+.img { padding: 1vw; width: 22vw; height: 18vh; }
+
+.p { text-align: center; display: block; width: 24vw; height: 9vh; line-height: 6vh; margin: 0; padding: 0; }
