--- a/app/sass/list.scss
+++ b/app/sass/list.scss
@@ -49,9 +49,9 @@ section{  /*头部大框架*/
 
     }
     article{ /*主题内容*/
-        padding-top: 43px;
-        width: 100%;
-        height: 1000px;
+        padding-top: 39px;
+        width: 100vw;
+        height: auto;
         background: #f1f5f6;
         display: flex;      
     span.headerlist{/*右侧固定菜单栏*/
@@ -91,8 +91,9 @@ section{  /*头部大框架*/
        }  
         
         nav{ /*左边的导航列表*/
+            padding-top: 10px;
             width: 100px;
-            height: auto;
+            height: 428px;
             background: #fff;
             ul{
                 width: 100px;
@@ -104,30 +105,34 @@ section{  /*头部大框架*/
                     font-size: 14px;
                     text-align: center;
                     line-height: 42px;
+                    a{
+                        text-decoration: none;
+                        color: #3d3d3d;        
+                    }
                 }
             }
             
         }
     article{  /*ajax请求数据*/
-            width: 100%;
-            height: 800px;
+            width: 85vw;
+            height: auto;
             margin-left: 10px;
             display: flex;
             background: #fff;
             padding-top: 10px;
             flex-direction: column;
             h1{  /*热门推荐标题*/
-                width: 100%;
+                width: 85vw;
                 height: 38px;
                 line-height: 40px;
                 background:#f1f5f6 ;
                 margin: 0;
-                padding-top: 0;
+                padding-top: 5px;
 
             }
             ul{
                 padding-top:5px ;
-                width: 100%;
+                width: auto;
                 height: auto;
                 display: flex;
                 flex-wrap: wrap;
@@ -137,89 +142,56 @@ section{  /*头部大框架*/
             
         }
     }
-    footer{ /*底部列表*/
-        position: fixed;
-        bottom: 0;
-        padding-top: 10px;
-        width: 100%;
-        height: 53px;
-        border-top: 1px solid #cccccc;  
-        background: #fff; 
-        ul{
-            display: flex;
-            flex: 1;
-            margin: 0;
-            padding: 0;
-            color: #777777; 
-            li:nth-child(3){ //第三个子元素,高亮
+    footer{ /*底部列表当前高亮*/
+       .active{
+            #homeicon3{
                 color: #8e488e;
-            }
-            li{  /*底部列表每一个子元素*/
-                display: flex;
-                flex: 1;
-                flex-direction: column;
-                font-size: 12px;
-                text-align: center;
-                cursor: pointer; 
-                span.iconfont{ /*列表子元素字体图标*/
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                    font-size: 22px;
-                    text-align: center;
-                }
-            }           
-        }     
+             }
+             .text{
+                color: #8e488e;
+             }         
+        }         
     }
 }
 
-/*ajax数据加载的样式*/
-.active{
-    color: #ff0000;
-    background:  #f1f5f6;
+/*点击左导航,出现样式*/
+.nobg{
+    background:#f1f5f6;
 }
-//.li{ 
-//  flex: 3;
-//  height: 120px;;
-//  background: #fff;
-//  display: flex;
-//  flex-direction: column;                   
-//  flex: 1;
-//}
-//.img{
-// flex: 5;
-// width: 30%;
-// height: 90px;
-//}
-//.p{
-// text-align: center;
-// display: block;
-// flex: 1;
-// height: 20px;
-// line-height: 20px;
-// margin: 0;
-// padding: 0;
-//
-//}
+.color{
+    color: #ff0000;    
+}
+/*ajax数据加载的样式*/
+.a{
+    display: inline-block;
+    width: 23vw;
+    height: 20vh;;
+    background: #fff;  
+}
+.title_a{
+    text-decoration: none;   
+    color: #3d3d3d;
+}
 .li{ 
-    width: 290px;
-    height: 120px;;
+    width: 23vw;
+    height: 20vh;;
     background: #fff;
     display: flex;
-    flex-direction: column;                   
+    flex-direction: column;                 
     flex: 1;
 }
 .img{
-   width: 90px;
-   height: 90px;
+    padding:1vw;
+    width: 22vw;
+    height: 18vh;
 }
 .p{
    text-align: center;
    display: block;
-   width: 80px;
-   height: 20px;
-   line-height: 20px;
+   width: 24vw;
+   height: 9vh;
+   line-height: 6vh;
    margin: 0;
    padding: 0;
-
 }
+
