--- a/app/sass/perfect.scss
+++ b/app/sass/perfect.scss
@@ -2,16 +2,15 @@
 /*列表页样式*/
 body,html,ul{
     list-style: none;
-    width: 100%;
+    width: 100vw;
     height: auto;
     margin: 0;
     padding: 0;
 }
 section{  /*头部大框架*/
-    width: 100%;
-    height: 2000px; 
+    height: auto; 
     header{
-        width: 100%;
+        width: 100vw;
         height: 48px;
         background:#8e488e;
         color: #fff;
@@ -46,8 +45,7 @@ section{  /*头部大框架*/
         
     }
     article{ /*内容*/
-        width: 100%;
-        width: 100%;
+        width: 100vw;
         height: 400px;
         padding-left: 9%;
         padding-right: 10%;
@@ -58,7 +56,7 @@ section{  /*头部大框架*/
                 top:47px;
                 right:10px;
                 opacity: 0;
-                background:#666;;
+                background:#666;
                 border-radius: 5px;
                 margin: 0;
                 padding: 0;
@@ -91,7 +89,7 @@ section{  /*头部大框架*/
             padding: 0;
         }
         p.user{ /*昵称*/
-            width: 100%;
+            width: 100vw;
             height: 34px;
             text-align: center;
             overflow: hidden;
@@ -126,7 +124,7 @@ section{  /*头部大框架*/
             }
         }
         p.tel{ /*手机号码*/
-            width: 100%;
+            width: 100vw;
             height: 35px;
             text-align: center;
             margin-top: 10px;
@@ -162,7 +160,7 @@ section{  /*头部大框架*/
             }         
         }
         hgroup.address{ /*收货地址*/
-            width: 100%;
+            width: 100vw;
             height: 170px;
             text-align: center;
             margin-top: 10px;
@@ -226,7 +224,7 @@ section{  /*头部大框架*/
             }      
         }
         .btn{/*提交按钮*/
-            width: 82.5%;
+            width: 82.5vw;
             height: 34px;
             margin-top: 20px;
             background: #8e488e;
@@ -237,36 +235,15 @@ section{  /*头部大框架*/
         }
   
     }
-    footer{ /*底部列表*/
-        position: fixed;
-        bottom: 0;
-        padding-top: 10px;
-        width: 100%;
-        height: 53px;
-        border-top: 1px solid #cccccc;   
-        ul{
-            display: flex;
-            flex: 1;
-            margin: 0;
-            padding: 0;
-            color: #777777; 
-            li:last-child{ //第三个子元素,高亮
+    
+    footer{ /*底部列表当前高亮*/     
+       .active{
+            #homeicon5{
                 color: #8e488e;
-            }
-            li{  /*底部列表每一个子元素*/
-                display: flex;
-                flex: 1;
-                flex-direction: column;
-                font-size: 12px;
-                text-align: center;
-                span.iconfont{ /*列表子元素字体图标*/
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                    font-size: 22px;
-                    text-align: center;
-                }
-            }           
-        }     
+             }
+             .text{
+                color: #8e488e;
+             }         
+        }         
     }
 }
