--- a/app/css/myorder.css
+++ b/app/css/myorder.css
@@ -36,7 +36,7 @@ body { margin: 0; padding: 0; height: 130vh; }
 
 .order_details div .total { display: flex; justify-content: flex-end; padding: 10px 0; font-size: 1em; border-bottom: 1px solid #ddd; }
 
-.order_details div .total span { color: orangered; margin-right: 10px; }
+.order_details div .total span { color: orangered; margin-right: 10px; margin-left: 10px; }
 
 .order_details div .btn { padding: 10px 0; display: flex; justify-content: flex-end; flex-wrap: nowrap; }
 
