--- a/app/sass/myorder.scss
+++ b/app/sass/myorder.scss
@@ -96,7 +96,9 @@ body{
              border-bottom: 1px solid #ddd;
             span{
                 color: orangered;
+              
                 margin-right: 10px;
+                margin-left: 10px;
             }
         }
         .btn{
