--- a/app/css/list.css
+++ b/app/css/list.css
@@ -4,7 +4,7 @@ body, html, ul { list-style: none; width: 100%; height: auto; margin: 0; padding
 
 section { /*头部大框架*/ width: 100%; height: 1000px; }
 
-section header { width: 100%; height: 48px; background: #8e488e; color: #fff; line-height: 48px; position: fixed; overflow: hidden; }
+section header { width: 100vw; height: 48px; background: #8e488e; color: #fff; line-height: 48px; position: fixed; overflow: hidden; }
 
 section header h1 { display: inline-block; width: 70%; height: 48px; line-height: 48px; font-size: 17px; color: #fff; text-align: center; margin: 0; padding: 0; }
 
@@ -20,11 +20,11 @@ section article span.headerlist a { display: block; font-weight: normal; text-de
 
 section article span.headerlist:before { content: ''; display: inline-block; position: absolute; right: 10px; top: -16px; width: 0; height: 0; border: 10px solid transparent; border-bottom: 8px solid #666; }
 
-section article nav { /*左边的导航列表*/ padding-top: 10px; width: 100px; height: 428px; background: #fff; }
+section article nav { /*左边的导航列表*/ padding-top: 10px; width: 20vw; height: 428px; background: #fff; }
 
-section article nav ul { width: 100px; height: 100%; }
+section article nav ul { width: 100vw; height: 100%; }
 
-section article nav ul li { width: 100px; height: 42px; border-top: 1px solid #f1f5f6; font-size: 14px; text-align: center; line-height: 42px; }
+section article nav ul li { width: 20vw; height: 42px; border-top: 1px solid #f1f5f6; font-size: 14px; text-align: center; line-height: 42px; }
 
 section article nav ul li a { text-decoration: none; color: #3d3d3d; }
 
