--- a/app/sass/list.scss
+++ b/app/sass/list.scss
@@ -12,7 +12,7 @@ section{  /*头部大框架*/
     width: 100%;
     height: 1000px; 
     header{
-        width: 100%;
+        width: 100vw;
         height: 48px;
         background:#8e488e;
         color: #fff;
@@ -54,7 +54,7 @@ section{  /*头部大框架*/
         height: auto;
         background: #f1f5f6;
         display: flex;      
-    span.headerlist{/*右侧固定菜单栏*/
+        span.headerlist{/*右侧固定菜单栏*/
             position: absolute;
             display: block;
             top:47px;
@@ -92,14 +92,14 @@ section{  /*头部大框架*/
         
         nav{ /*左边的导航列表*/
             padding-top: 10px;
-            width: 100px;
+            width: 20vw;
             height: 428px;
             background: #fff;
             ul{
-                width: 100px;
+                width: 100vw;
                 height: 100%;
                 li{
-                    width: 100px;
+                    width: 20vw;
                     height: 42px;
                     border-top: 1px solid #f1f5f6;
                     font-size: 14px;
