--- a/app/sass/zhuce.scss
+++ b/app/sass/zhuce.scss
@@ -6,7 +6,7 @@ header{
      background:#8e488e;
      padding: 15px 0;
      color: #fff;
-     font-size: 16px;
+     font-size: 1em;
      font-weight: 600;
      justify-content: center;
      align-items: center;
@@ -22,7 +22,7 @@ header{
          flex: 1;
          text-align:left;
          margin-left: 10px;
-         font-size: 22px;
+         font-size: 1em;
      }     
      span.title{
          flex: 4;
@@ -52,7 +52,7 @@ header{
                         display: block;
                         font-weight: normal;
                         text-decoration: none;
-                        font-size: 12px;
+                        font-size: 1em;
                         text-align: center;
                         width: 120px;
                         padding: 10px 0;
@@ -84,7 +84,7 @@ section {
         a{
         text-decoration: none;
         color: #333333;
-        font-size: 2vh;
+        font-size: 1em;
         margin-top: 3vh;
     }
     p{
@@ -120,7 +120,7 @@ section {
        margin-top: 45vh;
        margin-left: 5vw ;
        border-radius:2vw ;
-       padding-top:4vh; 
+       padding-top:3vh; 
         a{
             display: inline-block;
             background:darkmagenta;
@@ -132,7 +132,7 @@ section {
             line-height:5vh;
             margin-top: -2vh;
             color: white;
-            font-size: 2vh;
+            font-size: 1em;
             font-weight: 600;
         }
      
@@ -144,7 +144,7 @@ section {
            width: 10vw;
            height: 10vw;
            color: white;
-           font-size: 5vh;
+           font-size: 2em;
        }
   
 }
@@ -157,7 +157,7 @@ section {
         width: 100%;
         height: 4vh;
         display: flex;
-        border: 0.5vw solid darkgray;
+        border: 0.1em solid darkgray;
         border-radius: 6px;
         margin-bottom: 2vh;
         input {
@@ -171,7 +171,7 @@ section {
             color: darkgray;
             display: inline-block;
             flex: 2;
-            font-size: 2vh;
+            font-size: 1em;
         }
         input {
             border-left: 0.5vw solid darkgray;
@@ -199,7 +199,7 @@ section {
         }
     }
     .reg_btn {
-        font-size: 2vh;
+        font-size: 1em;
         border: none;
         width: 100%;
         height: 4vh;
