--- a/app/css/zhuce.css
+++ b/app/css/zhuce.css
@@ -36,18 +36,22 @@ section .close { position: absolute; top: 1vh; right: 2vw; width: 10vw; height: 
 
 .reg_form { margin: 0; padding: 0; width: 94vw; padding: 3vw; }
 
-.reg_form label { width: 100%; height: 4vh; display: flex; border: 0.1em solid darkgray; border-radius: 6px; margin-bottom: 2vh; }
+.reg_form label { width: 100%; height: 5vh; display: flex; border: 0.1em solid darkgray; border-radius: 6px; margin-bottom: 2vh; }
 
 .reg_form label input { border: none; }
 
-.reg_form label.phone span { text-align: left; line-height: 4vh; color: darkgray; display: inline-block; flex: 2; font-size: 1em; }
+.reg_form label.phone span { text-align: left; line-height: 5vh; color: darkgray; display: inline-block; flex: 2; font-size: 1em; }
 
-.reg_form label.phone input { border-left: 0.5vw solid darkgray; flex: 5; }
+.reg_form label.phone input { flex: 5; }
 
-.reg_form label.checknumber span { flex: 4; text-align: center; line-height: 4vh; font-size: 2vh; background: #8e488e; -moz-border-radius-topright: 6px; font-weight: 600; color: white; }
+.reg_form label.checknumber span { flex: 3; text-align: center; line-height: 5vh; font-size: 1em; -moz-border-radius-topright: 6px; font-weight: 600; }
 
-.reg_form label.checknumber input { flex: 6; }
+.reg_form label.checknumber span.get { background: #8e488e; color: white; }
+
+.reg_form label.checknumber span.checknum { background: darkgray; }
+
+.reg_form label.checknumber input { flex: 5; }
 
 .reg_form label.password input { width: 100%; }
 
-.reg_form .reg_btn { font-size: 1em; border: none; width: 100%; height: 4vh; text-align: center; border: 1vw solid #8e488e; background: #8e488e; font-weight: 600; border-radius: 5px; color: white; }
+.reg_form .reg_btn { font-size: 1em; border: none; width: 100%; height: 5vh; text-align: center; border: 1vw solid #8e488e; background: #8e488e; font-weight: 600; border-radius: 5px; color: white; }
