--- a/app/sass/perfect.scss
+++ b/app/sass/perfect.scss
@@ -1,90 +1,26 @@
 
 /*列表页样式*/
-body,html,ul{
+body,html{
     list-style: none;
     width: 100vw;
     height: auto;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+}
+ul{
+    list-style: none;
+    height: auto;
+    margin: 0;
+    padding: 0;    
 }
 section{  /*头部大框架*/
     height: auto; 
-    header{
-        width: 100vw;
-        height: 48px;
-        background:#8e488e;
-        color: #fff;
-        line-height: 48px;
-        position: fixed;
-        overflow: hidden;    
-        h1{   /*标题*/
-            display: inline-block;
-            width: 70%;
-            height: 48px;
-            line-height: 48px;
-            font-size: 17px;
-            color: #fff;
-            text-align: center;
-            margin: 0;
-            padding: 0;            
-        }
-        span.icon-fanhui{ /*返回按钮*/
-            width: 10%;
-            height: 48px;
-            display: inline-block;
-            float: left;
-            margin-left: 15px;            
-        } 
-        span.icon-liebiao{ /*列表按钮*/
-            width: auto;
-            height: auto;
-            float: right;
-            display: inline-block;           
-            margin-right: 20px;     
-            cursor: pointer;                    
-       }   
-        
-    }
     article{ /*内容*/
-        padding-top: 10vh;
+        padding-top: 13vh;
         width: 100vw;
         height: 400px;
         padding-left: 9%;
-        padding-right: 10%;
-        span.headerlist{/*右侧固定菜单栏*/
-                position: fixed;
-                display: block;
-                top:47px;
-                right:10px;
-                opacity: 0;
-                background:#666;
-                border-radius: 5px;
-                margin: 0;
-                padding: 0;
-                a{
-                    display: block;
-                    font-weight: normal;
-                    text-decoration: none;
-                    font-size: 12px;
-                    text-align: center;
-                    width: 120px;
-                    padding: 10px 0;
-                    color: #fff;
-                    opacity: 0.9;
-                    cursor: pointer;
-                }
-                &:before{
-                    content: '';
-                    display:inline-block;
-                    position: absolute;
-                    right: 10px;
-                    top:-16px;
-                    width: 0;
-                    height: 0;
-                    border: 10px solid transparent;
-                    border-bottom:8px solid #666;
-                }                       
-           }            
+        padding-right: 10%;           
         p{
             margin: 0;
             padding: 0;
@@ -160,40 +96,7 @@ section{  /*头部大框架*/
                 float: left;                
             }         
         }
-//      div.boxaddress{
-//          width: 100vw;
-//          height: 180px;
-//          p.col{ /*收货地址*/
-//              width: auto;
-//              height: auto;
-//              text-align: center;              
-//              float: left;
-//              span.delivery{
-//                  display: inline-block;
-//                  width: 20vw;
-//                  height: 168px;
-//                  background: #eeeeee;
-//                  border: 1px solid #cccccc;
-//                  border-top-left-radius: 5px;
-//                  border-bottom-left-radius: 5px;
-//                  color: #555555;
-//                  font-size: 14px;
-//                  text-align: center;
-//                  line-height: 166px;
-//                  margin: 0;
-//                  padding: 0;
-//                  float: left;                
-//              }
-//              #list_1{
-//                  width: 50vw;
-//              }
-//              
-//
-//          }
-//
-//
-//      }
-
+      }
 
         hgroup.address{ /*收货地址*/
             width: 100vw;
@@ -269,9 +172,7 @@ section{  /*头部大框架*/
             border: none;    
             cursor: pointer;        
         }
-  
-    }
-    
+
     footer{ /*底部列表当前高亮*/     
        .active{
             #homeicon5{
