--- a/app/css/myorder.css
+++ b/app/css/myorder.css
@@ -32,6 +32,8 @@ body { margin: 0; padding: 0; height: 130vh; }
 
 .order_details div .content section div span:first-child { margin-bottom: 30px; }
 
+.order_details div .content section div span:last-child { color: orangered; }
+
 .order_details div .content section span { flex: 1; display: flex; justify-content: flex-end; align-items: flex-end; margin-right: 20px; }
 
 .order_details div .total { display: flex; justify-content: flex-end; padding: 10px 0; font-size: 1em; border-bottom: 1px solid #ddd; }
