--- a/app/sass/login.scss
+++ b/app/sass/login.scss
@@ -63,3 +63,19 @@ section{
         }
     }
 }
+
+.zhuce{
+    display: flex;
+    span{
+        flex: 1;
+         margin-left: 10px;
+         a{
+        font-size: 1em;
+        color: #333;
+    }
+    a:hover{
+        text-decoration: none;
+    }
+    }
+   
+}
